--- a/PNGManipulator/PNGManipulator.csproj
+++ b/PNGManipulator/PNGManipulator.csproj
@@ -21,4 +21,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BinaryTools\BinaryTools\BinaryTools.csproj" />
+  </ItemGroup>
+
 </Project>
